# opm

./: .dockerignore  .env.example  .env.production.example  .env.revproxy  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETED-FEATURES.md  Dockerfile  PLANNED-FEATURES.md  README.md  TODO.md  USERSTORYS.md  compose-dev.yml  compose-gvm.yml  compose-prod.yml  compose.yml  prd.json  prod-app.env.example  prod-mysql.env.example  progress.txt  push-to-registry.sh  release.sh  verify_progress.py
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  start.sh
backend/scripts/: dev-entrypoint.sh  fix_migration_revision.py  init_admin.py  migrate_to_global_ports.py  seed_nse.py  wait-for-db.py
backend/src/: clear_scans.py
backend/src/app/: __init__.py  main.py
backend/src/app/core/: __init__.py  alert_types.py  config.py  database.py  deps.py  exceptions.py  permissions.py  scanner_types.py  security.py  version.py
backend/src/app/lib/: export.py  ip_utils.py  ssh_utils.py
backend/src/migrations/: env.py
backend/tests/: conftest.py  test_2fa.py  test_alert_event_emission.py  test_alert_events.py  test_alert_recurrence.py  test_alert_timeline.py  test_alerts.py  test_auth.py  test_gvm_library.py  test_host_risk_trend.py  test_host_timeline.py  test_hostname_cache_status.py  test_hostname_lookup_filler.py  test_hostname_lookup_io.py  test_hostname_lookup_queue.py  test_hostname_lookup_scanner_results.py  test_hostname_lookup_service.py  test_network_overview.py  test_networks.py  test_nse_results.py  test_permissions.py  test_port_comment_patch.py  test_rule_hit_counts.py  test_scan_profiles.py  test_scanner_hostnames_endpoint.py  test_scanner_jobs.py  test_scanner_overview.py  test_scans.py  test_schedule_convert.py  test_security.py  test_users.py  test_vulnerability_results.py
docker/: nginx.conf  (+2 more)
scanner/: Dockerfile  Dockerfile.dev  Dockerfile.gvm  Dockerfile.unified  compose.yml  pyproject.toml
scanner/src/: __init__.py  client.py  discovery.py  hostname_enrichment.py  hostname_sources.py  main.py  models.py  orchestration.py  script_cache.py  ssh_probe.py  threading_utils.py  utils.py
scanner/src/scanners/: __init__.py  base.py  greenbone.py  greenbone_imports.py  greenbone_metadata.py  masscan.py  nmap.py  nse.py  nuclei.py  registry.py
scanner/tests/: __init__.py  test_client_hostname_methods.py  test_greenbone.py  test_hostname_enrichment.py  test_hostname_lookup_queue_poller.py  test_hostname_sources.py  test_nse.py  test_nuclei.py  test_orchestration_phases.py  test_ssh_probe.py  test_utils.py
(+549 files in other folders)
